src/components/slider/slider.module.scss
.slider {
    border-radius: 10px;
    z-index: 10;
    margin-left: 10%;
    margin-right: 10%;
    margin-top: 50px;
    @media screen and (min-width: 768px) {
        margin-left: 20%;
        margin-right: 20%;
    }
    .imageWrap {
        height: 100%;
        display: flex;
        align-items: center;
        justify-content: center;
        .image {
            border-radius: 10px;
        }
    }
}

